--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css" integrity="sha384-OLYO0LymqQ+uHXELyx93kblK5YIS3B2ZfLGBmsJaUyor7CpMTBsahDHByqSuWW+q" crossorigin="anonymous">
 		<title>Serch's Links</title>
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-177429414-1"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-177429414-1');
+		</script>
 	</head>
 	<body>
 		<div class="container">
