--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					rel="noopener noreferrer"
 				>
 					<img
-						src="images/profile-pic.jpg"
+						src="images/profile2022.jpg"
 						alt="Photo of Serch"
 						class="profile-pic"
 					/>
@@ -125,6 +125,11 @@
 				<a href="https://twitter.com/_serchnm">
 					<div class="link-list-item light-1">
 						<i class="fab fa-twitter" style="font-size: 18px;"></i> Twitter 
+					</div>
+				</a>
+				<a href="https://www.twitch.tv/serchnm">
+					<div class="link-list-item medium">
+						<i class="fab fa-twitch" style="font-size: 18px;"></i> Twitch 
 					</div>
 				</a>
 				<a href="mailto:sergio.navarro2501@gmail.com">
